--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
     <!-- Vue -->
-    <div id="app">
+    <div id="app" class="app">
+        <!-- Header -->
+        <header class="main-header">
+        </header>
+        <!-- Main -->
+        <main class="main-content">
+
+        </main>
     </div>
     <!-- JavaScript -->
     <script src="./js/app.js"></script>
