--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </header>
         <!-- Main -->
         <main class="main-content">
-
+            <!-- Container -->
+            <div class="container">
+                <!-- Boolzapp -->
+                <div class="boolzapp">
+                    
+                </div>
+            </div>
         </main>
     </div>
     <!-- JavaScript -->
