ADD boolzapp structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
             <div class="container">
                 <!-- Boolzapp -->
                 <div class="boolzapp">
-                    
+                    <!-- Chat -->
+                    <div class="chat">
+
+                    </div>
+                    <!-- Conversazione -->
+                    <div class="conversation">
+                        
+                    </div>
                 </div>
             </div>
         </main>
