ADD chat's structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
                 <div class="boolzapp">
                     <!-- Chat -->
                     <div class="chat">
-
+                        <!-- Profilo -->
+                        <div class="profile">
+                            
+                        </div>
+                        <!-- Notifiche -->
+                        <div class="notifications">
+                        </div>
+                        <!-- Barra di ricerca -->
+                        <div class="search">
+                        </div>
+                        <!-- Messaggi -->
+                        <div class="messages">
+                        </div>
                     </div>
                     <!-- Conversazione -->
                     <div class="conversation">
