ADD profile info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
                     <div class="chat">
                         <!-- Profilo -->
                         <div class="profile">
-                            
+                            <!-- Informazioni del profilo -->
+                            <div class="profile__info">
+                                <!-- Immagine profilo -->
+                                <div class="profile__info--img">
+                                    <!-- Immagine -->
+                                    <img src="./img/sofia.jpg" alt="Sofia">
+                                </div>
+                                <!-- Nome del profilo -->
+                                <div class="profile__info--name">
+                                    <!-- Nome -->
+                                    <span>Sofia</span>
+                                </div>
+                            </div>
                         </div>
                         <!-- Notifiche -->
                         <div class="notifications">
