ADD profile actions

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
                                     <span>Sofia</span>
                                 </div>
                             </div>
+                            <!-- Azioni del profilo -->
+                            <div class="profile__actions">
+                                <!-- Storie -->
+                                <span class="profile__actions--stories">
+                                    <i class="fa-solid fa-circle-notch"></i>
+                                </span>
+                                <!-- Contatti -->
+                                <span class="profile__actions--contacts">
+                                    <i class="fa-solid fa-message"></i>
+                                </span>
+                                <!-- Opzioni -->
+                                <span class="profile__actions--options">
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </span>
+                            </div>
                         </div>
                         <!-- Notifiche -->
                         <div class="notifications">
