ADD notifications img

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                         </div>
                         <!-- Notifiche -->
                         <div class="notifications">
+                            <!-- Immagine delle notifiche -->
+                            <div class="notifications__img">
+                                <!-- Immagine -->
+                                <span>
+                                    <i class="fa-regular fa-bell-slash"></i>
+                                </span>
+                            </div>
                         </div>
                         <!-- Barra di ricerca -->
                         <div class="search">
