ADD notifications hint

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
                                     <i class="fa-regular fa-bell-slash"></i>
                                 </span>
                             </div>
+                            <!-- Consiglio di attivare le notifiche -->
+                            <div class="notifications__hint">
+                                <!-- Testo -->
+                                <p class="notifications__hint--text">
+                                    Ricevi notifiche di nuovi messaggi
+                                </p>
+                                <!-- Attivazione notifiche -->
+                                <p class="notifications__hint--able">
+                                    Attiva notifiche desktop
+                                </p>
+                            </div>
                         </div>
                         <!-- Barra di ricerca -->
                         <div class="search">
