--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
                         </div>
                         <!-- Barra di ricerca -->
                         <div class="search">
+                            <!-- Barra -->
+                            <div class="search__bar">
+                                <!-- Bottone -->
+                                <button class="search__bar--btn">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                                <!-- Input -->
+                                <input class="search__bar--input" type="text" placeholder="Cerca o inizia una nuova chat">
+                            </div>
                         </div>
                         <!-- Messaggi -->
                         <div class="messages">
