--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
                         </div>
                         <!-- Messaggi -->
                         <div class="messages">
+                            <!-- Lista dei messaggi -->
+                            <ul class="list">
+                                <!-- Elemento della lista -->
+                                <li class="list-item">
+
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <!-- Conversazione -->
