ADD list of messages

--- a/index.html
+++ b/index.html
@@ -92,8 +92,56 @@
                             <!-- Lista dei messaggi -->
                             <ul class="list">
                                 <!-- Elemento della lista -->
+                                <li class="list-item active">
+                                    <!-- Carta -->
+                                    <div class="card">
+                                        <!-- Immagine della carta -->
+                                        <div class="card__img">
+                                            <!-- Immagine -->
+                                            <img src="./img/michele.jpg" alt="Michele">
+                                        </div>
+                                        <!-- Informazioni della carta -->
+                                        <div class="card__info">
+                                            <!-- Nome -->
+                                            <div class="card__info--name">
+                                                Michele
+                                            </div>
+                                            <!-- Testo -->
+                                            <div class="card__info--text">
+                                                Ultimo messaggio inviato
+                                            </div>
+                                        </div>
+                                        <!-- Tempo -->
+                                        <div class="card__time">
+                                            12:00
+                                        </div>
+                                    </div>
+                                </li>
+                                <!-- Elemento della lista -->
                                 <li class="list-item">
-
+                                    <!-- Carta -->
+                                    <div class="card">
+                                        <!-- Immagine della carta -->
+                                        <div class="card__img">
+                                            <!-- Immagine -->
+                                            <img src="./img/fabio.jpg" alt="Fabio">
+                                        </div>
+                                        <!-- Informazioni della carta -->
+                                        <div class="card__info">
+                                            <!-- Nome -->
+                                            <div class="card__info--name">
+                                                Fabio
+                                            </div>
+                                            <!-- Testo -->
+                                            <div class="card__info--text">
+                                                Ultimo messaggio inviato
+                                            </div>
+                                        </div>
+                                        <!-- Tempo -->
+                                        <div class="card__time">
+                                            12:00
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
