ADD person in the conversation head

--- a/index.html
+++ b/index.html
@@ -148,7 +148,36 @@
                     </div>
                     <!-- Conversazione -->
                     <div class="conversation">
-                        
+                        <!-- Testa della conversazione -->
+                        <div class="conversation__head">
+                            <!-- Persona -->
+                            <div class="person">
+                                <!-- Immagine della persona -->
+                                <div class="person__img">
+                                    <!-- Immagine -->
+                                    <img src="./img/michele.jpg" alt="Michele">
+                                </div>
+                                <!-- Informazioni della persona -->
+                                <div class="person__info">
+                                    <!-- Nome -->
+                                    <p class="person__info--name">
+                                        Michele
+                                    </p>
+                                    <!-- Ultimo accesso -->
+                                    <p class="person__info--access">
+                                        Ultimo accesso oggi alle 12:00
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Corpo della conversazione -->
+                        <div class="conversastion__body">
+
+                        </div>
+                        <!-- Piede della conversazione -->
+                        <div class="conversation__footer">
+
+                        </div>
                     </div>
                 </div>
             </div>
