ADD conversation actions

--- a/index.html
+++ b/index.html
@@ -169,6 +169,21 @@
                                     </p>
                                 </div>
                             </div>
+                            <!-- Azioni -->
+                            <div class="conversation__head--actions">
+                                <!-- Ricerca -->
+                                <span>
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </span>
+                                <!-- Allegato -->
+                                <span>
+                                    <i class="fa-solid fa-paperclip"></i>
+                                </span>
+                                <!-- Informazioni -->
+                                <span>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </span>
+                            </div>
                         </div>
                         <!-- Corpo della conversazione -->
                         <div class="conversastion__body">
