ADD background to the conversation body

--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                                 <span>
                                     <i class="fa-solid fa-paperclip"></i>
                                 </span>
-                                <!-- Informazioni -->
+                                <!-- Opzioni -->
                                 <span>
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </span>
                             </div>
                         </div>
                         <!-- Corpo della conversazione -->
-                        <div class="conversastion__body">
+                        <div class="conversation__body">
 
                         </div>
                         <!-- Piede della conversazione -->
