ADD content with messages

--- a/index.html
+++ b/index.html
@@ -187,7 +187,42 @@
                         </div>
                         <!-- Corpo della conversazione -->
                         <div class="conversation__body">
-
+                            <!-- Contenuto della conversazione -->
+                            <div class="content">
+                                <!-- Messaggio -->
+                                <div class="message sender">
+                                    <!-- Contentuto -->
+                                    <div class="message__content">
+                                        Hai portato a spasso il cane?
+                                    </div>
+                                    <!-- Orario -->
+                                    <div class="message__time">
+                                        15:30
+                                    </div>
+                                </div>
+                                <!-- Messaggio -->
+                                <div class="message sender">
+                                    <!-- Contentuto -->
+                                    <div class="message__content">
+                                        Ricordati di stendere i panni
+                                    </div>
+                                    <!-- Orario -->
+                                    <div class="message__time">
+                                        15:50
+                                    </div>
+                                </div>
+                                <!-- Messaggio -->
+                                <div class="message receiver">
+                                    <!-- Contentuto -->
+                                    <div class="message__content">
+                                        Tutto fatto!
+                                    </div>
+                                    <!-- Orario -->
+                                    <div class="message__time">
+                                        16:15
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!-- Piede della conversazione -->
                         <div class="conversation__footer">
