ADD conversation footer

--- a/index.html
+++ b/index.html
@@ -226,7 +226,21 @@
                         </div>
                         <!-- Piede della conversazione -->
                         <div class="conversation__footer">
-
+                            <!-- Emoji -->
+                            <div class="emoji">
+                                <!-- Icona emoji -->
+                                <i class="fa-regular fa-face-smile"></i>
+                            </div>
+                            <!-- Testo del messaggio -->
+                            <div class="text">
+                                <!-- Input -->
+                                <input class="text__input" type="text" placeholder="Scrivi un messaggio">
+                            </div>
+                            <!-- Audio -->
+                            <div class="audio">
+                                <!-- Microfono -->
+                                <i class="fa-solid fa-microphone"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
