--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>Vue Boolzapp</title>
 </head>
 <body>
-    <!-- Vue -->
-    <div id="app" class="app">
-        <!-- Header -->
-        <header class="main-header">
-        </header>
-        <!-- Main -->
-        <main class="main-content">
-            <!-- Container -->
-            <div class="container">
+    <!-- Header -->
+    <header class="main-header">
+    </header>
+    <!-- Main -->
+    <main class="main-content">
+        <!-- Container -->
+        <div class="container">
+            <!-- Vue -->
+            <div id="app">
                 <!-- Boolzapp -->
                 <div class="boolzapp">
                     <!-- Chat -->
@@ -219,8 +219,8 @@
                     </div>
                 </div>
             </div>
-        </main>
-    </div>
+        </div>
+    </main>
     <!-- JavaScript -->
     <script src="./js/app.js"></script>
 </body>
