TRYING to implement the options

--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
                                             {{ content.message }}
                                         </div>
                                         <!-- Bottone -->
-                                        <div class="message__btn">
+                                        <div class="message__btn" v-on:click="(displayOptions) ? displayOptions = false : displayOptions = true">
                                             <!-- Icona -->
                                             <i class="fa-solid fa-chevron-down"></i>
                                             <!-- Opzioni -->
-                                            <ul class="message__options">
+                                            <ul class="message__options" v-if="displayOptions">
                                                 <!-- Cancella il messaggio -->
                                                 <li class="message__options--delete" v-on:click="deleteMessage(i)">Cancella il messaggio</li>
                                             </ul>
