ADD print of the time of the messages

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                     </div>
                                     <!-- Orario -->
                                     <div class="message__time">
-                                        {{ content.date }}
+                                        {{ getOnlyTime(content.date) }}
                                     </div>
                                 </li>
                             </ul>
